--- a/serverless.yml
+++ b/serverless.yml
@@ -6,6 +6,7 @@ plugins:
 custom:
   client:
     bucketName: ${self:service}-${self:provider.stage}-${self:provider.region}
+    distributionFolder: build
 
 provider:
   name: aws
